# dlp_control

./: README.md
control_dlp/dlpyc900/: pyproject.toml
control_dlp/dlpyc900/LCR500YX_Images/: Block_Load.txt  add_400.txt  add_512.txt  add_72.txt  add_800.txt  onthefly.txt
control_dlp/dlpyc900/Test_connection/: OTF.py  OTF_fix.py  OTF_v2.py  connection.py  control.py  image_process.ipynb  pattern.py
control_dlp/dlpyc900/dlpyc900/: __init__.py  dlp.py  dlp_errors.py  erle.py
control_dlp/dlpyc900/example/: example_videoprojector.py  readme.md
control_dlp/dlpyc900/tests/: test_code.py
control_dlp_v2/: dmd.py  plot.py
generate_hologram/: holo_list.py  hologram.ipynb  plotting.py
